--- a/report/main.tex
+++ b/report/main.tex
@@ -712,13 +712,13 @@ The hierarchical design represents a significant improvement over our previous f
 
 \section{Conclusion}
 
-In this project, a fuzzy expert system was developed to classify websites based on their risk of phishing using a combination of linguistic variables, rule-based reasoning, and fuzzy logic techniques. The system successfully integrates structural, content-based and external features to provide a nuanced evaluation of the legitimacy of the website.
+In this project, a fuzzy expert system was developed to classify websites based on their risk of phishing using a combination of linguistic variables, rule-based reasoning, and fuzzy logic techniques.
 
-The proposed architecture incorporates a four-level hierarchical design that progressively refines the feature analysis and risk assessment. Using specialized processing at each level, the system overcomes the limitations of flat, single-layered approaches, enabling improved detection accuracy and flexibility. The rule base, constructed with 35 conjunctive rules, effectively captures combinations of characteristics to differentiate between safe, weakly suspicious, strongly suspicious, and phishing websites.
+The system successfully integrates structural, content-based and external features to provide a nuanced evaluation of the legitimacy of the website. The rule base, constructed with 35 conjunctive rules, effectively captures combinations of characteristics to differentiate between safe, weakly suspicious, strongly suspicious, and phishing websites.
 
 Testing across diverse scenarios demonstrated the system's robustness in handling conflicting inputs and ambiguous cases. The system outputs both a numerical risk score and a categorical classification, ensuring flexibility for integration into various security applications. The use of the MATLAB Fuzzy Logic Toolkit further validated the system's behavior through visualized rule activations and 3D surface plots.
 
-The enhanced design presented in Task 5 highlights the potential for future improvements by incorporating additional features such as SSL certificate analysis, language consistency, and blacklist verification. This modular and adaptive design ensures the system's ability to evolve alongside emerging phishing tactics.
+The enhanced design presented in Task 5 highlights the potential for future improvements by incorporating additional features such as SSL certificate analysis, language consistency, and blacklist verification. The proposed architecture incorporates a four-level hierarchical design that progressively refines the feature analysis and risk assessment. Using specialized processing at each level, the system overcomes the limitations of flat, single-layered approaches, enabling improved detection accuracy and flexibility. This modular and adaptive design ensures the system's ability to evolve alongside emerging phishing tactics.
 
 In general, the fuzzy expert system provides a solid foundation for phishing detection, combining interpretability, accuracy, and extensibility. Future work could explore hybrid approaches with machine learning techniques and real-time feature extraction to further enhance the system's performance in dynamic environments.
 
